# ct-endpoint-audit

./: .gitignore  CITATION.cff  README.md  SHIP_CHECKLIST.md  pyproject.toml
.github/workflows/: test.yml
data/: audit_1000_trials.json  r23_reclassified_v2.json
paper/: Makefile  abstract.md  main.tex  outline.md  references.bib
paper/tables/: supp_table_s1_b_window.tex
src/audit/: batch_audit.py  classifier.py  completion_drift.py  reclassify.py
src/plotting/: make_figures.py  make_supp_table.py
tests/: test_api_agreement.py  test_classifier.py
